set container to % instead of vh to avoid cutoff

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -172,7 +172,7 @@ code {
 }
 
 .container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
